# style-print-manager

./: .gitignore  PRD_restriction_query_api.md  README.md  requirements.txt  run.py
.claude/: automation-testing-skills.md  prd.md
.claude/skills/: README.md  test-form.md  test-modal.md  test-pagination.md  test-search.md  test-table.md  test-tabs.md
app/: database.py  main.py
app/routers/: prints.py  restrictions.py
backend/: .env.example  generate_test_excel.py  import_restrictions.py  import_restrictions_from_excel.py  import_restrictions_source.py  migrate_rules.py  migrate_to_new_structure.py  pyproject.toml  run.py  test_import_restrictions.py  test_restriction_api.py  test_restrictions.xlsx  特殊款式限定位置.xlsx  特殊款式限定位置1.xlsx
backend/app/: cache.py  crud.py  database.py  main.py  models.py  name_resolver.py  pattern_suffix_validator.py  schemas.py
backend/app/routers/: excel_io.py  positions.py  prints.py  restrictions.py  styles.py
backend/tests/: test_cache.py  test_excel_import.py  test_name_resolver.py  test_pattern_suffix_validator.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  excel.ts  filterTypes.ts  positions.ts  prints.ts  restrictions.ts  styles.ts
frontend/src/components/filters/: FilterToolbar.tsx
frontend/src/components/layout/: AppLayout.tsx
frontend/src/pages/: ExcelPage.tsx  PositionsPage.tsx  PrintsPage.tsx  RestrictionsPage.tsx  StylesPage.tsx
frontend/src/types/: index.ts
static/: index.html
